--- a/03_ML/fcc_magic_example.ipynb
+++ b/03_ML/fcc_magic_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNsGK5SIrj/pzMF8o1KA3sS",
+      "authorship_tag": "ABX9TyOC2RUsanqzbAH+BeOB7Vsp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "MJWdcy9srl0P"
       },
@@ -80,7 +80,7 @@
         "id": "yYECWEIXArno",
         "outputId": "0330a4a9-b7e7-4739-94d0-c7530ceb0e3a"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -564,7 +564,7 @@
         "id": "rwmYnK_QBQHK",
         "outputId": "049aa09a-5c78-4680-f664-e6be1631dcaf"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4249,7 +4249,7 @@
         "id": "5QqYxoyZEbA2",
         "outputId": "93cdfbdf-355f-4d40-c0be-002dc72120fd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4262,6 +4262,18 @@
           "execution_count": 11
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "df[\"class\"].unique() use => Python used with pandas (a library for data analysis)\n",
+        "- df: This is your DataFrame, a table-like structure containing your data.\n",
+        "- \"class\": This is the column in the DataFrame that you're interested in.\n",
+        "- .unique(): This function finds all the unique (distinct) values in that column."
+      ],
+      "metadata": {
+        "id": "fPG6DmDt0lFu"
+      }
     },
     {
       "cell_type": "markdown",
@@ -4280,7 +4292,7 @@
       "metadata": {
         "id": "VxR9xKQrMab1"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4312,7 +4324,7 @@
           "height": 1000
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
