--- a/03_ML/fcc_magic_example.ipynb
+++ b/03_ML/fcc_magic_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOC2RUsanqzbAH+BeOB7Vsp",
+      "authorship_tag": "ABX9TyPoALjTJ5o2p8OLhNwXB1T9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4298,7 +4298,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "above input features predict the labels as output of machince"
+        "above input features predict the labels as output of machince by:\n",
+        "1. df[\"class\"] == \"g\":\n",
+        "This creates a boolean series (True/False) where each row is checked to see if the value in the class column is \"g\".\n",
+        "Example: If df[\"class\"] = [\"g\", \"h\"], the result would be:\n",
+        "[True, False].\n",
+        "2. .astype(int):\n",
+        "This converts the boolean values (True/False) into integers (1/0).\n",
+        "True becomes 1, and False becomes 0.\n",
+        "3. df[\"class\"] = ...:\n",
+        "The resulting integers (0 or 1) are assigned back to the class column in the DataFrame."
       ],
       "metadata": {
         "id": "nkCoT60GyC4l"
