--- a/03_ML/fcc_magic_example.ipynb
+++ b/03_ML/fcc_magic_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPoALjTJ5o2p8OLhNwXB1T9",
+      "authorship_tag": "ABX9TyNfIY+9wT7MttWTj0K3tUrx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4436,6 +4436,29 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "This above visualizing is by Python using matplotlib to create histograms, distribution of data in each column of cols.\n",
+        "1. for label in cols[:-1]:\n",
+        "\n",
+        "* This loops through all column names in the list cols, except the last one ([:-1] slices the list to exclude the last element).\n",
+        "* label is the name of the column being processed in each iteration.\n",
+        "2. plt.hist(...)\n",
+        "\n",
+        "* First plt.hist: Plots a histogram for rows in the DataFrame (df) where \"class\" == 1 (indicating \"gamma\" class).\n",
+        "\n",
+        "* df[df[\"class\"] == 1][label]: Filters the data for the \"gamma\" class and selects the column label.\n",
+        "* color=\"blue\": Sets the color of this histogram to blue.\n",
+        "* label=\"gamma\": Adds a label to this histogram.\n",
+        "* alpha=0.7: Adjusts transparency (0 is fully transparent, 1 is opaque).\n",
+        "* density=True: Normalizes the histogram so the area under the curve equals 1 (to compare probabilities).\n",
+        "* Second plt.hist: Plots a histogram for rows where \"class\" == 0 (indicating \"hadron\" class), with similar settings but in red (color=\"red\").\n"
+      ],
+      "metadata": {
+        "id": "Gq1TCv4E3sfb"
+      }
     }
   ]
 }
