--- a/03_ML/fcc_magic_example.ipynb
+++ b/03_ML/fcc_magic_example.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNfIY+9wT7MttWTj0K3tUrx",
+      "authorship_tag": "ABX9TyO/wG3ybSumxwRkdmpBGtTV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4454,7 +4454,22 @@
         "* label=\"gamma\": Adds a label to this histogram.\n",
         "* alpha=0.7: Adjusts transparency (0 is fully transparent, 1 is opaque).\n",
         "* density=True: Normalizes the histogram so the area under the curve equals 1 (to compare probabilities).\n",
-        "* Second plt.hist: Plots a histogram for rows where \"class\" == 0 (indicating \"hadron\" class), with similar settings but in red (color=\"red\").\n"
+        "* Second plt.hist: Plots a histogram for rows where \"class\" == 0 (indicating \"hadron\" class), with similar settings but in red (color=\"red\").\n",
+        "3. plt.title(label)\n",
+        "\n",
+        "* Sets the title of the plot to the current column name (label).\n",
+        "4. plt.ylabel(\"probability by me\")\n",
+        "\n",
+        "* Labels the y-axis as \"probability by me\".\n",
+        "5. plt.xlabel(label)\n",
+        "\n",
+        "* Labels the x-axis with the column name (label).\n",
+        "6. plt.legend()\n",
+        "\n",
+        "* Adds a legend to distinguish the blue and red histograms.\n",
+        "7. plt.show()\n",
+        "\n",
+        "* Displays the plot for the current column.\n"
       ],
       "metadata": {
         "id": "Gq1TCv4E3sfb"
