--- a/03_ML/AL+ML+NN_Theory.ipynb
+++ b/03_ML/AL+ML+NN_Theory.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZISn1QtWsLsDS+eG5UAwK",
+      "authorship_tag": "ABX9TyM1+jEcBHV51Y7kBN2VC7pV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,6 +71,15 @@
       ],
       "metadata": {
         "id": "_GS-_r6kpe9N"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "try only"
+      ],
+      "metadata": {
+        "id": "GyJduDWw9NIr"
       }
     }
   ]
