--- a/01_Libraries/0_Numpy/Numpy.ipynb
+++ b/01_Libraries/0_Numpy/Numpy.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPpA9bmtb99eFsuyQRwyKSG",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyM4CcWhlojDwaKcfPacCGYj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +30,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Numpy is a python library which can solve matrices and vector problems. Numpy is form with c++ because it is a most closer to machine level language after 'c' then it transform into API of Python for uses of developer.\n",
+        "## NumPy is a Python library used for numerical computations, particularly matrices and vectors. It is primarily implemented in C for performance optimization and then exposed to Python via an API for ease of use by developers.\n",
         "[1,2,3,4,5] --> 1D-array or vector or a list.\n",
         "\n",
         "[\n",
@@ -61,10 +62,10 @@
       "execution_count": 2,
       "metadata": {
         "id": "LY4qvy5V3-zp",
-        "outputId": "4631f10a-55d2-4c16-b1c4-4bc22507ec39",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "4631f10a-55d2-4c16-b1c4-4bc22507ec39"
       },
       "outputs": [
         {
@@ -88,12 +89,12 @@
         "print (\"\\n 2D array: \",array_2d)"
       ],
       "metadata": {
-        "id": "yzq-GLjI_Q9K",
-        "outputId": "8992923a-3bae-495d-b54c-584984f3321a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 174
-        }
+          "height": 158
+        },
+        "id": "yzq-GLjI_Q9K",
+        "outputId": "8992923a-3bae-495d-b54c-584984f3321a"
       },
       "execution_count": 3,
       "outputs": [
@@ -126,11 +127,11 @@
         "print (\"\\n 2D array: \",array_2d)"
       ],
       "metadata": {
-        "id": "W3SqMpDkBD25",
-        "outputId": "6994a3d1-8b6e-4211-fa4a-1a3fa7599331",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "W3SqMpDkBD25",
+        "outputId": "6994a3d1-8b6e-4211-fa4a-1a3fa7599331"
       },
       "execution_count": 5,
       "outputs": [
@@ -161,11 +162,11 @@
         "print (py_list * 2)"
       ],
       "metadata": {
-        "id": "CDOm34qnAktI",
-        "outputId": "3e23a439-8dac-4e68-9833-7429857d44e2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CDOm34qnAktI",
+        "outputId": "3e23a439-8dac-4e68-9833-7429857d44e2"
       },
       "execution_count": 4,
       "outputs": [
@@ -194,11 +195,11 @@
         "print (\"\\n python array multiplication\", np_array * 2)"
       ],
       "metadata": {
-        "id": "-Xt8ZCRiBtTX",
-        "outputId": "658edec2-ec61-4b7c-f789-27856e45af50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-Xt8ZCRiBtTX",
+        "outputId": "658edec2-ec61-4b7c-f789-27856e45af50"
       },
       "execution_count": 9,
       "outputs": [
