--- a/02_DSA/Palindrome_number.ipynb
+++ b/02_DSA/Palindrome_number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "id": "e6b8d8e2",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "60b66b8d",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "no it is not\n"
+      "yes it is\n"
      ]
     }
    ],
