a small input change

--- a/02_DSA/Febonacci_number.ipynb
+++ b/02_DSA/Febonacci_number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "9d7ce541",
    "metadata": {},
    "outputs": [],
@@ -26,19 +26,27 @@
     "        a = b\n",
     "        b = sum \n",
     "        \n",
-    "        print (b, end=\" \")\n",
-    "        \n",
-    "    "
+    "        print (b, end=\" \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3521556b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "user need 6 number of febonacci series\n",
+      "0 1 1 2 3 5 "
+     ]
+    }
+   ],
    "source": [
     "n = int(input(\"Enter how much need\"))\n",
+    "print (f\"user need {n} number of febonacci series\")\n",
     "febonacci(n)"
    ]
   }
