--- a/02_DSA/Febonacci_number.ipynb
+++ b/02_DSA/Febonacci_number.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9d7ce541",
    "metadata": {},
    "outputs": [],
@@ -12,14 +12,17 @@
     "    a = 0\n",
     "    b = 1\n",
     "    \n",
+    "    # Handle 0 or negative number, user input\n",
     "    if n <= 0 :\n",
     "        return\n",
+    "    # Handle 1 number, user input\n",
     "    elif n == 1 :\n",
     "        print (a)\n",
     "        return\n",
     "    \n",
     "    print (a, b, end=\" \")\n",
     "    \n",
+    "    #-2 coz a,b already print\n",
     "    for i in range (n - 2):\n",
     "        \n",
     "        sum = a + b\n",
@@ -31,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3521556b",
    "metadata": {},
    "outputs": [
@@ -45,9 +48,10 @@
     }
    ],
    "source": [
-    "n = int(input(\"Enter how much need\"))\n",
-    "print (f\"user need {n} number of febonacci series\")\n",
-    "febonacci(n)"
+    "if __name__ == \"__main__\":\n",
+    "    n = int(input(\"Enter how much need\"))\n",
+    "    print (f\"user need {n} number of febonacci series\")\n",
+    "    febonacci(n)"
    ]
   }
  ],
