--- a/02_DSA/factorial_number.ipynb
+++ b/02_DSA/factorial_number.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "e286fd0c",
+   "metadata": {},
+   "source": [
+    "## Using Loop"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "5cca60bf",
@@ -36,6 +44,66 @@
     "    print (f\"User want {n}'s factorial\")\n",
     "    \n",
     "    factorial (n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4085a7a",
+   "metadata": {},
+   "source": [
+    "## Using Recursion "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a9f2cff9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "User want 5's factorial\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def factorial_no (n1):\n",
+    "    \n",
+    "    #Handling 0 and 1 recursion stoppage \n",
+    "    if n1 == 1 or n1 == 0 :\n",
+    "        return 1\n",
+    "    else :\n",
+    "        return (n1 * factorial_no(n1-1))\n",
+    "\n",
+    "n1 = int(input(\"Enter a number for getting factorial\"))\n",
+    "print (f\"User want {n1}'s factorial\")\n",
+    "factorial_no (n1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a177bb9",
+   "metadata": {},
+   "source": [
+    "### Main Recursion Logic\n",
+    "\n",
+    "- 5 * factorial_no 4 \n",
+    "- 5 * 4 * factorial_no 3 \n",
+    "- 5 * 4 * 3 * factorial_no 2\n",
+    "- 5 * 4 * 3 * 2 factorial_no 1\n",
+    "- 5 * 4 * 3 * 2 * 1 = 120"
    ]
   }
  ],
