--- a/02_DSA/Second_Largest_No_in_List.ipynb
+++ b/02_DSA/Second_Largest_No_in_List.ipynb
@@ -48,6 +48,74 @@
     "    else:\n",
     "        print(\"error\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffc398f3",
+   "metadata": {},
+   "source": [
+    "## Using heapq.nlargest()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "bea3aad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "a = [5,3,55,25,99,5]\n",
+    "tem = heapq.nlargest(len(a), a) #nlargest(how_many, from_where)\n",
+    "\n",
+    "print(tem[1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "455d1541",
+   "metadata": {},
+   "source": [
+    "## Using Sorting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "fbfeeb67",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [3, 55, 45, 65, 88]\n",
+    "\n",
+    "a.sort(reverse=True) #Big → Small (descending)\n",
+    "print(a[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "707d0543",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
