--- a/03_DataScience/Basic work without lib/1_Clear data.ipynb
+++ b/03_DataScience/Basic work without lib/1_Clear data.ipynb
@@ -1,84 +1,119 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "46bd62ab",
-   "metadata": {},
-   "source": [
-    "# Cleaning and Structuring the Data"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "46bd62ab",
+      "metadata": {
+        "id": "46bd62ab"
+      },
+      "source": [
+        "# Cleaning and Structuring the Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "757f0684",
+      "metadata": {
+        "id": "757f0684"
+      },
+      "source": [
+        "## Task 1: Identify Issues in the Data\n",
+        "### Problems:\n",
+        "- User ID 3 has an empty name.\n",
+        "- User ID 4 has a duplicate friend entry.\n",
+        "- User ID 5 has no connections or liked pages (inactive user).\n",
+        "- The pages list contains duplicate page IDs.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "6b410f67",
+      "metadata": {
+        "id": "6b410f67"
+      },
+      "source": [
+        "## Task 2: Clean the Data\n",
+        "- Remove users with missing names.\n",
+        "- Remove duplicate friend entries.\n",
+        "- Remove inactive users (users with no friends and no liked pages).\n",
+        "- Deduplicate pages based on IDs."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "387b13c8",
+      "metadata": {
+        "id": "387b13c8"
+      },
+      "source": [
+        "# Actual working on raw data file :-"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 0: For Json file working lib use"
+      ],
+      "metadata": {
+        "id": "ojmd4qKxlltq"
+      },
+      "id": "ojmd4qKxlltq"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "afccc398",
+      "metadata": {
+        "id": "afccc398"
+      },
+      "outputs": [],
+      "source": [
+        "import json"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 1: Funtion for load the external json data"
+      ],
+      "metadata": {
+        "id": "wRYEOFvLmckJ"
+      },
+      "id": "wRYEOFvLmckJ"
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "6f1ddf7c",
+      "metadata": {
+        "id": "6f1ddf7c"
+      },
+      "outputs": [],
+      "source": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.6"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "markdown",
-   "id": "757f0684",
-   "metadata": {},
-   "source": [
-    "## Task 1: Identify Issues in the Data\n",
-    "### Problems:\n",
-    "- User ID 3 has an empty name.\n",
-    "- User ID 4 has a duplicate friend entry.\n",
-    "- User ID 5 has no connections or liked pages (inactive user).\n",
-    "- The pages list contains duplicate page IDs.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b410f67",
-   "metadata": {},
-   "source": [
-    "## Task 2: Clean the Data\n",
-    "- Remove users with missing names.\n",
-    "- Remove duplicate friend entries.\n",
-    "- Remove inactive users (users with no friends and no liked pages).\n",
-    "- Deduplicate pages based on IDs."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "387b13c8",
-   "metadata": {},
-   "source": [
-    "# Actual working on data :-"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "afccc398",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f1ddf7c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
