--- a/03_DataScience/Basic work without lib/1_Clear data.ipynb
+++ b/03_DataScience/Basic work without lib/1_Clear data.ipynb
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "afccc398",
       "metadata": {
         "id": "afccc398"
@@ -83,13 +83,73 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "6f1ddf7c",
       "metadata": {
         "id": "6f1ddf7c"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "def load_data (filename):\n",
+        "    with open (filename, \"r\") as f:\n",
+        "        data = json.load (f)\n",
+        "    return data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data"
+      ],
+      "metadata": {
+        "id": "vXr3CK0c4tSo",
+        "outputId": "8b7f5e9b-dae5-487b-89f5-43a3c5c286de",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 176
+        }
+      },
+      "id": "vXr3CK0c4tSo",
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'data' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-391604064.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Step 2: Remove users with missing names"
+      ],
+      "metadata": {
+        "id": "kFz25HZO33M1"
+      },
+      "id": "kFz25HZO33M1"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "clean_user = []\n",
+        "for user in data[\"users\"]:\n",
+        "  if user.get(\"name\",\"\").strip():\n",
+        "    clean_user.append(user)\n",
+        "  data[\"user\"]= clean_user"
+      ],
+      "metadata": {
+        "id": "V3jlQFIp3stG"
+      },
+      "id": "V3jlQFIp3stG",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
