--- a/03_DataScience/Basic work without lib/1_Clear data.ipynb
+++ b/03_DataScience/Basic work without lib/1_Clear data.ipynb
@@ -97,35 +97,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "data"
-      ],
-      "metadata": {
-        "id": "vXr3CK0c4tSo",
-        "outputId": "8b7f5e9b-dae5-487b-89f5-43a3c5c286de",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 176
-        }
-      },
-      "id": "vXr3CK0c4tSo",
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'data' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m/tmp/ipython-input-391604064.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "### Step 2: Remove users with missing names"
@@ -138,18 +109,73 @@
     {
       "cell_type": "code",
       "source": [
-        "clean_user = []\n",
-        "for user in data[\"users\"]:\n",
-        "  if user.get(\"name\",\"\").strip():\n",
-        "    clean_user.append(user)\n",
-        "  data[\"user\"]= clean_user"
+        "def clean_data(data):\n",
+        "\n",
+        "    # Remove users with missing names\n",
+        "    clean_user = []\n",
+        "    for user in data[\"users\"]:\n",
+        "      if user.get(\"name\",\"\").strip():\n",
+        "        clean_user.append(user)\n",
+        "      data[\"user\"]= clean_user\n",
+        "\n",
+        "    # Remove duplicate friends\n",
+        "    for user in data[\"users\"]:\n",
+        "        user[\"friends\"] = list(set(user[\"friends\"]))\n",
+        "\n",
+        "    # Remove inactive users\n",
+        "    data[\"users\"] = [user for user in data[\"users\"] if user[\"friends\"] or user[\"liked_pages\"]]\n",
+        "\n",
+        "    # Remove duplicate pages\n",
+        "    unique_pages = {}\n",
+        "    for page in data[\"pages\"]:\n",
+        "        unique_pages[page[\"id\"]] = page\n",
+        "    data[\"pages\"] = list(unique_pages.values())"
       ],
       "metadata": {
         "id": "V3jlQFIp3stG"
       },
       "id": "V3jlQFIp3stG",
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "kFdt0f3K6ljb"
+      },
+      "id": "kFdt0f3K6ljb"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = clean_data(data)\n",
+        "json.dump(data, open(\"cleaned_codebook_data.json\", \"w\"), indent=4)\n",
+        "print(\"Data cleaned successfully!\")"
+      ],
+      "metadata": {
+        "id": "VM5jq2xw6l_W",
+        "outputId": "4a5961ef-ad90-4a04-f7b5-f6af3d55531c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 280
+        }
+      },
+      "id": "VM5jq2xw6l_W",
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'data' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-2775262306.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cleaned_codebook_data.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Data cleaned successfully!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
