--- a/02_DSA/Swap_2_number_without_variable.ipynb
+++ b/02_DSA/Swap_2_number_without_variable.ipynb
@@ -1,8 +1,96 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "d5c4180b",
+   "metadata": {},
+   "source": [
+    "## Using Tuple Unpacking"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "06cd815c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 50\n",
+      "y: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = 10, 50\n",
+    "\n",
+    "x, y = y, x  # swapping\n",
+    "print(\"x:\", x)\n",
+    "print(\"y:\", y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74c37f6f",
+   "metadata": {},
+   "source": [
+    "## Using XOR Operator (just learn the code)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf37b891",
+   "metadata": {},
+   "source": [
+    "-  swap two variables at the bit level example = x as a 1100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "26fa79c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x: 50\n",
+      "y: 12\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = 12, 50\n",
+    "\n",
+    "x = x ^ y  \n",
+    "y = x ^ y  \n",
+    "x = x ^ y  \n",
+    "\n",
+    "print(\"x:\", x)\n",
+    "print(\"y:\", y)"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
