--- a/03_DataScience/Basic work without lib/1_Clear data.ipynb
+++ b/03_DataScience/Basic work without lib/1_Clear data.ipynb
@@ -12,18 +12,66 @@
     },
     {
       "cell_type": "markdown",
-      "id": "757f0684",
-      "metadata": {
-        "id": "757f0684"
-      },
       "source": [
-        "## Task 1: Identify Issues in the Data\n",
+        "## Task 1: Identify Issues in the Data"
+      ],
+      "metadata": {
+        "id": "1AT1GROP8Rt1"
+      },
+      "id": "1AT1GROP8Rt1"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(open(\"data1.json\").read())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lFSqOGfz8SUD",
+        "outputId": "1ea00f93-1b39-420b-d338-8a6565a14ba3"
+      },
+      "id": "lFSqOGfz8SUD",
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "    \"users\": [\n",
+            "        {\"id\": 1, \"name\": \"Amit\", \"friends\": [2, 3], \"liked_pages\": [101]},\n",
+            "        {\"id\": 2, \"name\": \"Priya\", \"friends\": [1, 4], \"liked_pages\": [102]},\n",
+            "        {\"id\": 3, \"name\": \"\", \"friends\": [1], \"liked_pages\": [101, 103]},\n",
+            "        {\"id\": 4, \"name\": \"Sara\", \"friends\": [2, 2], \"liked_pages\": [104]},\n",
+            "        {\"id\": 5, \"name\": \"Amit\", \"friends\": [], \"liked_pages\": []}\n",
+            "    ],\n",
+            "    \"pages\": [\n",
+            "        {\"id\": 101, \"name\": \"Python Developers\"},\n",
+            "        {\"id\": 102, \"name\": \"Data Science Enthusiasts\"},\n",
+            "        {\"id\": 103, \"name\": \"AI & ML Community\"},\n",
+            "        {\"id\": 104, \"name\": \"Web Dev Hub\"},\n",
+            "        {\"id\": 104, \"name\": \"Web Development\"}\n",
+            "    ]\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Problems:\n",
         "- User ID 3 has an empty name.\n",
         "- User ID 4 has a duplicate friend entry.\n",
         "- User ID 5 has no connections or liked pages (inactive user).\n",
-        "- The pages list contains duplicate page IDs.\n"
-      ]
+        "- The pages list contains duplicate page IDs."
+      ],
+      "metadata": {
+        "id": "TbJRBtSL8qg0"
+      },
+      "id": "TbJRBtSL8qg0"
     },
     {
       "cell_type": "markdown",
@@ -61,20 +109,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 27,
       "id": "afccc398",
       "metadata": {
         "id": "afccc398"
       },
       "outputs": [],
       "source": [
-        "import json"
+        "import json\n",
+        "data = \"data1.json\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type (data)"
+      ],
+      "metadata": {
+        "id": "vBP7bAe49i_Y",
+        "outputId": "f9639628-f561-4923-8be0-e648b072881e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "vBP7bAe49i_Y",
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Step 1: Funtion for load the external json data"
+        "### Step 1: Funtion for load the external json data (str into dict)"
       ],
       "metadata": {
         "id": "wRYEOFvLmckJ"
@@ -83,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 29,
       "id": "6f1ddf7c",
       "metadata": {
         "id": "6f1ddf7c"
@@ -94,6 +170,69 @@
         "    with open (filename, \"r\") as f:\n",
         "        data = json.load (f)\n",
         "    return data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "load_data(\"data1.json\")"
+      ],
+      "metadata": {
+        "id": "tPtGEwtp-wzV",
+        "outputId": "54101f26-7274-4625-c46a-c18fd05dd3e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "tPtGEwtp-wzV",
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'users': [{'id': 1, 'name': 'Amit', 'friends': [2, 3], 'liked_pages': [101]},\n",
+              "  {'id': 2, 'name': 'Priya', 'friends': [1, 4], 'liked_pages': [102]},\n",
+              "  {'id': 3, 'name': '', 'friends': [1], 'liked_pages': [101, 103]},\n",
+              "  {'id': 4, 'name': 'Sara', 'friends': [2, 2], 'liked_pages': [104]},\n",
+              "  {'id': 5, 'name': 'Amit', 'friends': [], 'liked_pages': []}],\n",
+              " 'pages': [{'id': 101, 'name': 'Python Developers'},\n",
+              "  {'id': 102, 'name': 'Data Science Enthusiasts'},\n",
+              "  {'id': 103, 'name': 'AI & ML Community'},\n",
+              "  {'id': 104, 'name': 'Web Dev Hub'},\n",
+              "  {'id': 104, 'name': 'Web Development'}]}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 30
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type (data)"
+      ],
+      "metadata": {
+        "id": "FibPPQaM_REs",
+        "outputId": "1090700a-41ab-416b-a180-0618e2601bf0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "FibPPQaM_REs",
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
+        }
       ]
     },
     {
@@ -135,16 +274,28 @@
         "id": "V3jlQFIp3stG"
       },
       "id": "V3jlQFIp3stG",
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "change in str to dic"
+      ],
       "metadata": {
         "id": "kFdt0f3K6ljb"
       },
       "id": "kFdt0f3K6ljb"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XDfLHX-k-jno"
+      },
+      "id": "XDfLHX-k-jno",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -154,28 +305,76 @@
         "print(\"Data cleaned successfully!\")"
       ],
       "metadata": {
-        "id": "VM5jq2xw6l_W",
-        "outputId": "4a5961ef-ad90-4a04-f7b5-f6af3d55531c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 280
-        }
+          "height": 349
+        },
+        "id": "VM5jq2xw6l_W",
+        "outputId": "25b8d2e0-08a7-421c-d44f-a1de93a6c435"
       },
       "id": "VM5jq2xw6l_W",
-      "execution_count": 10,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'data' is not defined",
+          "ename": "TypeError",
+          "evalue": "string indices must be integers, not 'str'",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
             "\u001b[0;32m/tmp/ipython-input-2775262306.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclean_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cleaned_codebook_data.json\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"w\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Data cleaned successfully!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'data' is not defined"
+            "\u001b[0;32m/tmp/ipython-input-2094188139.py\u001b[0m in \u001b[0;36mclean_data\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;31m# Remove users with missing names\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mclean_user\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mfor\u001b[0m \u001b[0muser\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"users\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m       \u001b[0;32mif\u001b[0m \u001b[0muser\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"name\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\"\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstrip\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m         \u001b[0mclean_user\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0muser\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(open(\"data1.json\").read())\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TL-Vf0XL72S8",
+        "outputId": "9c0111ae-5639-4320-d990-42e43d2b1baa"
+      },
+      "id": "TL-Vf0XL72S8",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{\n",
+            "    \"users\": [\n",
+            "        {\"id\": 1, \"name\": \"Amit\", \"friends\": [2, 3], \"liked_pages\": [101]},\n",
+            "        {\"id\": 2, \"name\": \"Priya\", \"friends\": [1, 4], \"liked_pages\": [102]},\n",
+            "        {\"id\": 3, \"name\": \"\", \"friends\": [1], \"liked_pages\": [101, 103]},\n",
+            "        {\"id\": 4, \"name\": \"Sara\", \"friends\": [2, 2], \"liked_pages\": [104]},\n",
+            "        {\"id\": 5, \"name\": \"Amit\", \"friends\": [], \"liked_pages\": []}\n",
+            "    ],\n",
+            "    \"pages\": [\n",
+            "        {\"id\": 101, \"name\": \"Python Developers\"},\n",
+            "        {\"id\": 102, \"name\": \"Data Science Enthusiasts\"},\n",
+            "        {\"id\": 103, \"name\": \"AI & ML Community\"},\n",
+            "        {\"id\": 104, \"name\": \"Web Dev Hub\"},\n",
+            "        {\"id\": 104, \"name\": \"Web Development\"}\n",
+            "    ]\n",
+            "}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "YtXH-wja718z"
+      },
+      "id": "YtXH-wja718z"
     }
   ],
   "metadata": {
